# colour-benchmarks

./: .gitignore  README.rst  asv.conf.conda.json  asv.conf.json  asv.conf.venv.json  pyproject.toml  requirements.txt  tasks.py
.github/workflows/: python-package.yml
LongBenchmarks/temperature/: cie_d.py  hernandez1999.py  kang2002.py  krystek1985.py  mccamy1992.py  robertson1968.py
benchmarks/: RGB.py  RGB_models.py  common.py  models.py
benchmarks/colour/: characterisation.py  colorimetry.py  notation.py  volume.py
benchmarks/colour/adaptation/: cie1994.py  cmccat2000.py  fairchild1990.py  vonkries.py
benchmarks/colour/algebra/: geometry.py  interpolation.py
benchmarks/colour/appearance/: cam16.py  ciecam02.py
benchmarks/colour/difference/: cam02_ucs.py  cam16_ucs.py  delta_e.py  din99.py
benchmarks/colour/models/: cam02_ucs.py  cie_lab.py  cie_luv.py  cie_ucs.py  cie_uvw.py  cie_xyy.py  common.py  din99.py  hdr_cie_lab.py  hdr_ipt.py  hunter_lab.py  hunter_rdab.py  ipt.py  jzazbz.py  osa_ucs.py
benchmarks/colour/recovery/: meng2015.py  smits1999.py
benchmarks/colour/rgb/: cmyk.py  common.py  cylindrical.py  ictcp.py  prismatic.py  rgb_colourspace.py  ycbcr.py  ycocg.py
benchmarks/colour/transfer_functions/: aces.py  arib_std_b67.py  arri_alexa_log_c.py  canon_log.py  cineon.py  dcdm.py  dicom_gsdf.py  dji_dlog.py  filmic_pro.py  filmlight_tlog.py  fujifilm_flog.py  gamma.py  gopro.py  itur_bt_1886.py  itur_bt_2020.py  itur_bt_2100.py  itur_bt_601.py  itur_bt_709.py  panalog.py  panasonic_vlog.py  pivoted_log.py  red_log.py  rimm_romm_rgb.py  smpte_240m.py  sony_slog.py  srgb.py  st_2084.py  viper_log.py
benchmarks/colour/utilities/: array.py  common.py
benchmarks/data/: Colour.cube
benchmarks/factories/: RGB.py  delta_e.py  differences.py  ijk.py
benchmarks/models/: RGB_models.py  characterisation.py
benchmarks/models/adaptation/: cie1994.py
benchmarks/models/algebra/: interpolation.py
benchmarks/models/appearance/: cam16.py  ciecam02.py
benchmarks/models/difference/: cam16_ucs.py
long_benchmarks/temperature/: cie_d.py  hernandez1999.py  kang2002.py  krystek1985.py  mccamy1992.py  ohno2013.py  robertson1968.py
utilities/: export_todo.py  unicode_to_ascii.py
(+21 files in other folders)
